# amethyst-example

./: Cargo.toml
examples/00_create_and_destroy/: config.ron  main.rs
examples/00_player/: main.rs
examples/01_create_window/: config.ron  display_config.ron  main.rs
examples/02-2_colored_image/: config.ron  main.rs
examples/02_image/: config.ron  main.rs
examples/03_key_input/: config.ron  main.rs
examples/03_move_to_mouse/: main.rs
examples/04_create_and_destroy/: main.rs
examples/04_move_image/: bindings.ron  config.ron  main.rs
examples/05_click/: config.ron  main.rs
examples/05_keyboard_input/: bindings.ron  config.ron  main.rs
examples/06_animation/: bindings.ron  config.ron  main.rs  spritesheet.ron
examples/06_create_item/: main.rs
examples/07_bounding_icon/: main.rs
examples/07_bounding_icons/: config.ron  main.rs  spritesheet.ron
examples/07_minigame/: config.ron  main.rs
examples/08_change_state/: config.ron  main.rs  spritesheet.ron
examples/08_physical_icons/: main.rs
examples/09_dragging_icon/: main.rs
examples/10_mouse_getdown/: main.rs
examples/11_animation/: config.ron  main.rs
examples/12_animation_and_move/: main.rs  spritesheet.ron
examples/13_text/: config.ron  main.rs  text.ron
examples/14_single_entity/: config.ron  main.rs
examples/15_delete_entity/: config.ron  main.rs
examples/16_variable_text/: main.rs
src/: lib.rs
