[package]
name = "amethyst-test"
version = "0.1.0"
authors = ["glaceef <masaki7322_art@yahoo.co.jp>"]
edition = "2018"

[dependencies]
amethyst = "*"

[dev-dependencies]
rand = "*"

[[example]]
name = "01"
path = "examples/01_create_window/main.rs"

[[example]]
name = "02"
path = "examples/02_image/main.rs"

[[example]]
name = "03"
path = "examples/03_key_input/main.rs"

[[example]]
name = "04"
path = "examples/04_move_image/main.rs"

[[example]]
name = "05"
path = "examples/05_click/main.rs"

[[example]]
name = "06"
path = "examples/06_create_item/main.rs"

[[example]]
name = "07"
path = "examples/07_bounding_icons/main.rs"

[[example]]
name = "08"
path = "examples/08_physical_icons/main.rs"
